# pointer

./: .gitignore  README.md  calibration.json  finger_tracker.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
finger_tracker/: __init__.py  __main__.py  calibration.py  config.py  detection.py  gestures.py  gui.py  mouse.py  palette.py  smoothing.py  state.py  tracker.py
finger_tracker/_wayland_generated/wayland/: __init__.py  wl_buffer.py  wl_compositor.py  wl_data_device.py  wl_data_device_manager.py  wl_data_offer.py  wl_data_source.py  wl_display.py  wl_fixes.py  wl_keyboard.py  wl_pointer.py  wl_region.py  wl_seat.py  wl_shm.py  wl_subsurface.py  wl_surface.py  wl_touch.py
finger_tracker/_wayland_generated/wlr_virtual_pointer_unstable_v1/: zwlr_virtual_pointer_manager_v1.py
finger_tracker/backends/: __init__.py  base.py  wlr_virtual_pointer.py
finger_tracker/filters/: __init__.py  one_euro.py
tests/: test_calibration.py  test_filters.py  test_gestures.py
