[project]
name = "pointer"
version = "1.0.0"
description = "Finger tracking mouse controller using MediaPipe and OpenCV"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe==0.10.14",
    "opencv-python==4.10.0.84",
    "pyautogui==0.9.54",
    "numpy==1.26.4",
    "evdev>=1.9.3",
    "pywayland>=0.4.18",
    "pygobject>=3.56.2",
]

[project.scripts]
pointer = "finger_tracker.gui:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finger_tracker"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
